--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                         <img src="Image./twitter.png" style="margin-right: 15px;cursor: pointer;">
                     </div>
                 </div>
-                <div class="col-lg-7" style="padding-left: 100px;">
+                <div class="col-lg-7 coltext" style="padding-left: 100px;">
                     <div class="form-group">
                         <p class="ptitle">FULL NAME<span class="pspan">*</span></p>
                         <input type="text" class="txtfullname" placeholder="E.g Alfon Labadan">
