--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                             <li><a class="nav-link btnpackages"
                                     style="margin-right: 20px;color:#424242;font-family: Muli Semibold;font-size: 15x;"
                                     href="packages.html">Packages</a></li>
-                            <li><a class="nav-link btncontact" target="_self" href="login.html">Login</a></li>
+                            <li><a class="nav-link btnlogin" target="_self" href="login.html" style="color: #00C853;padding: 10px 20px 10px 20px;">Login</a></li>
                         </ul>
                     </div>
                 </div>
