--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center" style="position: relative;">
                 <div class="col-lg-7 col-sm-12 col-md-12" style="margin-top:-100px;">
-                    <img src="Image/surehealthtrans.png" class="img-fluid" style="width:100px;">
+                    <img src="Image/surehealthtrans.png" class="img-fluid imglogo" style="width:100px;">
                     <p class="psignin">Login to <span style="color: #00C853;">Surehealth</span></p>
                     <p class="psignin1">Sign in with your credentials <br>or Create a new account</p>
                     <div class="form-group" style="margin-top:40px;">
