--- a/index.html
+++ b/index.html
@@ -87,9 +87,85 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row justify-content-around" style="margin-top: 40px;">
+                <div class="col-lg-4 col-md-6 justify-content-center colstep">
+                    <p class="pstepnumber text-center">01</p>
+                    <div class="dot mx-auto"></div>
+                    <hr class="hrstep"
+                        style="border-top: 1px dashed #BDBDBD;margin-top: -14px;margin-left:190px;z-index: 99999999;width: 100%;">
+                    <div class="div1" class="col1"
+                        style="background-color: white;border-radius: 15px;border: 1px solid #E0E0E0;margin-top: 40px;">
+                        <div class="row">
+                            <div class="col-lg-3 col-md-3 col-sm-3 col-3 colimage"
+                                style="background-color: #00C853;padding: 20px;border-top-left-radius: 15px;border-bottom-left-radius: 15px;">
+                                <img src="Image/select.png" class="img-fluid mx-auto d-block" style="width: 45px;">
+                            </div>
+                            <div class="col-lg-9 col-md-9 col-sm-9 col-9" style="margin-top: 20px;">
+                                <span class="pchoose"><span style="color: #00C853;font-weight: bold;">Choose the
+                                        right</span> membership
+                                    plan for you or your
+                                    loved one</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 colregister">
+                    <p class="pstepnumber text-center">02</p>
+                    <div class="dot mx-auto"></div>
+                    <hr class="hrstep"
+                        style="border-top: 1px dashed #BDBDBD;margin-top: -14px;margin-left:190px;z-index: 99999999;width: 100%;">
+                    <div class="div1"
+                        style="background-color: white;border-radius: 15px;border: 1px solid #E0E0E0;margin-top: 40px;">
+                        <div class="row">
+                            <div class="col-lg-3 col-md-3 col-sm-3 col-3"
+                                style="background-color: #00C853;padding: 20px;border-top-left-radius: 15px;border-bottom-left-radius: 15px;">
+                                <img src="Image/clipboard.png" class="img-fluid mx-auto d-block" style="width: 45px;">
+                            </div>
+                            <div class="col-lg-9 col-md-9 col-sm-9 col-9" style="margin-top: 20px;">
+                                <span class="pchoose"><span style="color: #00C853;font-weight: bold;">Register your
+                                        details.</span> Make
+                                    sure to double check your information.</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 colregister">
+                    <p class="pstepnumber text-center">03</p>
+                    <div class="dot mx-auto"></div>
+                    <div class="div1"
+                        style="background-color: white;border-radius: 15px;border: 1px solid #E0E0E0;margin-top: 25px;">
+                        <div class="row">
+                            <div class="col-lg-3 col-md-3 col-sm-3 col-3"
+                                style="background-color: #00C853;padding: 20px;border-top-left-radius: 15px;border-bottom-left-radius: 15px;">
+                                <img src="Image/credit-card.png" class="img-fluid mx-auto d-block" style="width: 45px;">
+                            </div>
+                            <div class="col-lg-9 col-md-9 col-sm-9 col-9" style="margin-top: 8px;">
+                                <span class="pchoose"><span style="color: #00C853;font-weight: bold;">Pay Online</span>
+                                    with either your
+                                    <img src="Image/visa.png" class="img-fluid" style="width: 32px;">&nbsp;or <img
+                                        src="Image/mastercard.png" class="img-fluid" style="width: 32px;"> for either
+                                    Debit or Credit Cards.</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <div class="container-fluid con2">
         <div class="container" id="pack">
-            <div class="row align-items-center w-100" style="margin-top: 40px;">
+            <div class="row align-items-center w-100" style="margin-top: 70px;">
                 <div class="col-lg-12 text-center">
                     <p style="font-family: Keep Calm;font-size: 25px;color:#1E3056">Why Choose <b
                             style="color: #00C853">Surehealth</b></p>
@@ -106,7 +182,7 @@
             <div class="row" style="margin-top: 50px;">
                 <div class="col-lg-12">
                     <div class="card-deck">
-                        <div class="card card1 surehealthcard">
+                        <div class="card card1 surehealthcard" style="border: 1px solid #E0E0E0;">
                             <img class="card-img-top img-fluid mx-auto" src="Image/classic.jpg" alt="Card image cap"
                                 style="width:55px;">
                             <div class="card-body">
@@ -115,7 +191,7 @@
                                 <p class="text-center pprice">&#8369;600</p>
                                 <hr class="hrfooter"
                                     style="background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
-                                <ul>
+                                <ul style="padding-left: 25px;">
                                     <li class="a pdescription">Unlimited consultations with our medical consultants</li>
                                     <li class="a pdescription">Fixed fee of PHP 400 for specialists</li>
                                     <li class="a pdescription">10% discount on laboratory & diagnostic services</li>
@@ -127,7 +203,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card card1 surehealthcard">
+                        <div class="card card1 surehealthcard" style="border: 1px solid #E0E0E0;">
                             <img class="card-img-top img-fluid mx-auto" src="Image/elitetrans.png" alt="Card image cap"
                                 style="width:55px;">
                             <div class="card-body">
@@ -136,7 +212,7 @@
                                 <p class="text-center pprice">&#8369;999</p>
                                 <hr class="hrfooter"
                                     style="background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
-                                <ul>
+                                <ul style="padding-left: 25px;">
                                     <li class="a pdescription">Unlimited consultations with our medical consultants</li>
                                     <li class="a pdescription">Fixed fee of PHP 400 for specialists</li>
                                     <li class="a pdescription">15% discount on laboratory & diagnostic services</li>
@@ -154,7 +230,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card surehealthcard">
+                        <div class="card surehealthcard" style="border: 1px solid #E0E0E0;">
                             <img class="card-img-top img-fluid mx-auto" src="Image/prime.jpg" alt="Card image cap"
                                 style="width:55px;">
                             <div class="card-body">
@@ -163,7 +239,7 @@
                                 <p class="text-center pprice">&#8369;2999</p>
                                 <hr class="hrfooter"
                                     style="background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
-                                <ul>
+                                <ul style="padding-left: 25px;">
                                     <li class="a pdescription">Unlimited consultations with our medical consultants</li>
                                     <li class="a pdescription">Fixed fee of PHP 400 for specialists</li>
                                     <li class="a pdescription">20% discount on laboratory & diagnostic services</li>
@@ -193,10 +269,10 @@
     </div>
     <div class="container-fluid">
         <div class="container">
-            <div class="row row1 justify-content-around" style="margin-top: 50px;">
-                <div class="col-lg-10 col-md-12 col-sm-12 col-12">
+            <div class="row row1" style="margin-top: 50px;">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                     <div class="card-deck">
-                        <div class="card surehealthcard">
+                        <div class="card surehealthcard" style="border: 1px solid #E0E0E0;">
                             <img class="card-img-top img-fluid mx-auto" src="Image/veterantrans.png"
                                 alt="Card image cap" style="width:55px;">
                             <div class="card-body">
@@ -205,7 +281,7 @@
                                 <p class="text-center pprice">&#8369;1499</p>
                                 <hr class="hrfooter"
                                     style="background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
-                                <ul>
+                                <ul style="padding-left: 25px;">
                                     <li class="a pdescription">Unlimited consultations with our medical consultants</li>
                                     <li class="a pdescription">Fixed fee of PHP 400 for specialists</li>
                                     <li class="a pdescription">15% discount on laboratory & diagnostic services</li>
@@ -223,7 +299,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card surehealthcard">
+                        <div class="card surehealthcard" style="border: 1px solid #E0E0E0;">
                             <img class="card-img-top img-fluid mx-auto" src="Image/prestige1.png" alt="Card image cap"
                                 style="width:55px;">
                             <div class="card-body">
@@ -233,7 +309,7 @@
                                 <p class="text-center pprice">&#8369;9999</p>
                                 <hr class="hrfooter"
                                     style="background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
-                                <ul>
+                                <ul style="padding-left: 25px;">
                                     <li class="a pdescription">Unlimited consultations with our medical consultants</li>
                                     <li class="a pdescription">Fixed fee of PHP 300 for specialists</li>
                                     <li class="a pdescription">20% discount on laboratory & diagnostic services</li>
@@ -245,6 +321,29 @@
                                     <li class="a pdescription">Free dental checkup, plus a 10% discount on other dental
                                         procedures</li>
                                     <li class="a pdescription">Free Comprehensive Executive Checkup</li>
+                                </ul>
+                                <div class="text-center">
+                                    <input type="button" value="Buy now" class="btnsurehealth">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card surehealthcard" style="border: 1px solid #E0E0E0;">
+                            <img class="card-img-top img-fluid mx-auto" src="Image/youthtrans.png" alt="Card image cap"
+                                style="width:70px;">
+                            <div class="card-body">
+                                <h5 class="card-title text-center"
+                                    style="font-family: Muli;font-weight: bold;color:#424242">Youth
+                                </h5>
+                                <p class="text-center pprice">&#8369;1499</p>
+                                <hr class="hrfooter"
+                                    style="background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
+                                <ul style="padding-left: 25px;">
+                                    <li class="a pdescription">For 0-17 years of age</li>
+                                    <li class="a pdescription">Unlimited consulations with our pediatricians</li>
+                                    <li class="a pdescription">20% discount on laboratory & diagnostic services</li>
+                                    <li class="a pdescription">Fixed consultations fee with our other specialists</li>
+                                    <li class="a pdescription">Free dental checkup, plus a 20% discount on other dental
+                                        procedures</li>
                                 </ul>
                                 <div class="text-center">
                                     <input type="button" value="Buy now" class="btnsurehealth">
@@ -414,6 +513,10 @@
     }
 
     mymap.on('click', onMapClick);
+    
+    window.onload = function () {
+        console.log('page is loaded');
+    }
 </script>
 
 </html>
